@@ -62,6 +62,7 @@ module constants
   use kinds
   implicit none
   save
+  integer :: screen_dpi,screen_size_h,screen_size_v
   real :: scrsz,scrrat
   real(double) :: pi,tpi,pi2,c3rd
   real(double) :: l0,r0,m0,g,c,day,yr,km
@@ -77,11 +78,17 @@ end module constants
 subroutine setconstants
   use constants
   implicit none
-  !scrsz=10.8  !Screen dimensions: MacBook, Gentoo
-  !scrrat=0.57 
   
-  scrsz=14.406   !Screen dimensions: ThinkPad
-  scrrat=0.5875 
+  !ThinkPad, Gentoo with 1440x900:
+  !screen_size_h = 1436
+  !screen_size_v = 860
+  
+  !Default:
+  screen_size_h = 1000  !Horizontal screen size (pixels)
+  screen_size_v = 700   !Vertical screen size (pixels)
+  
+  screen_dpi = 96        ! Screen resolution:  96 is common on PCs, 72 on Macs (still?)
+  
   
   pi       =  4*datan(1.d0)                         !Pi, area of circle/r^2
   tpi      =  2*pi
@@ -454,7 +461,7 @@ end subroutine locater
 !***********************************************************************************************************************************
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine rindex(narr,rarr,indx)  !Return a sorted index indx of array rarr of length n - single precision
   use kinds
   implicit none
@@ -466,9 +473,9 @@ subroutine rindex(narr,rarr,indx)  !Return a sorted index indx of array rarr of 
   call dindex(narr,darr,indx)  !Call the double-precision routine
   
 end subroutine rindex
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine dindex(narr,arr,ind)  !Return a sorted index ind of array arr of length narr - double precision
   use kinds
   implicit none
@@ -557,7 +564,7 @@ subroutine dindex(narr,arr,ind)  !Return a sorted index ind of array arr of leng
   
   goto 1
 end subroutine dindex
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
 
 
@@ -905,7 +912,7 @@ end subroutine quit_program
 
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine bin_data_1d(n,x,norm,nbin,xmin1,xmax1,xbin,ybin)  !Count the number of points in each bin (1D), taken from analyse_mcmc
   ! x - input: data, n points
   ! norm - input: normalise (1) or not (0)
@@ -949,7 +956,7 @@ subroutine bin_data_1d(n,x,norm,nbin,xmin1,xmax1,xbin,ybin)  !Count the number o
   if(norm.eq.1) ybin = ybin/(sum(ybin)+1.e-30)
   
 end subroutine bin_data_1d
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
 
 !***********************************************************************************************************************************
@@ -975,7 +982,7 @@ end function time_stamp
 
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine set_PGPS_title(PSfile,PStitle)  !Set the title in a Postscript file generated by PGPlot
   implicit none
   integer :: status,system
@@ -998,6 +1005,139 @@ subroutine set_PGPS_title(PSfile,PStitle)  !Set the title in a Postscript file g
   end if
   
 end subroutine set_PGPS_title
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
+
+
+!***********************************************************************************************************************************
+!> \brief Read/create EggletonPlot settings file
+subroutine eggletonplot_settings()
+  use constants
+  implicit none
+  integer :: io,u
+  logical :: ex
+  character :: filename*99
+  
+  !Define namelist, file name
+  namelist /screen_settings/ screen_size_h,screen_size_v,screen_dpi
+  filename = trim(homedir)//'/.eggletonplot'
+  inquire(file=trim(filename), exist=ex)
+  
+  u = 10
+  
+  if(ex) then
+     open(unit=u,form='formatted',status='old',action='read',position='rewind',file=trim(filename),iostat=io)
+     if(io.ne.0) then
+        write(0,'(A,/)')'  Error opening settings file '//trim(filename)//' for reading.'
+        return
+     end if
+     read(u, nml=screen_settings, iostat=io)
+     close(u)
+     
+     if(io.eq.0) then
+        call pgxy2szrat_screen(screen_size_h,screen_size_v, screen_dpi, scrsz,scrrat)
+     else
+        
+        write(6,*)
+        write(0,'(A)')'  An error occured when reading the settings file '//trim(filename)// &
+             ', using default settings.'
+        write(6,'(A)')'  The format of your settings file may be outdated.'
+        write(6,'(A)')'  Consider renaming the existing file and rerunning this program to generate a new settings file.'
+        write(6,*)
+     end if
+     
+  else
+     
+     write(6,*)
+     write(6,'(A)')'  No settings file found.'
+     write(6,'(A)')'  Creating '//trim(filename)//' with default settings,'
+     write(6,'(A)')'  please edit it to set your preferences.'
+     write(6,*)
+     
+     open(unit=u,form='formatted',status='new',action='write',position='rewind',file=trim(filename),iostat=io)
+     if(io.ne.0) then
+        write(0,'(A,/)')'  Error opening settings file '//trim(filename)//' for writing.'
+        return
+     end if
+     write(u, nml=screen_settings, iostat=io)
+     close(u)
+     if(io.ne.0) write(0,'(A)')'  An error occured when writing the settings file '//trim(filename)
+  end if
+  
+  call pgxy2szrat_screen(screen_size_h,screen_size_v, screen_dpi, scrsz,scrrat)
+  
+end subroutine eggletonplot_settings
+!***********************************************************************************************************************************
+
+
+
+
+!***********************************************************************************************************************************
+!> Convert PGPlot x,y dimensions to paper size and ratio for bitmap
+subroutine pgxy2szrat_bitmap(x,y,size,ratio)
+  implicit none
+  integer, intent(in) :: x,y
+  real, intent(out) :: size,ratio
+  
+  size = real(x-1)/85.
+  ratio = real(y-1)/real(x-1)
+  
+end subroutine pgxy2szrat_bitmap
+!***********************************************************************************************************************************
+
+
+!***********************************************************************************************************************************
+!> Convert PGPlot x,y dimensions to paper size and ratio for bitmap
+subroutine pgszrat2xy_bitmap(size,ratio,x,y)
+  implicit none
+  real, intent(in) :: size,ratio
+  integer, intent(out) :: x,y
+  
+  x = nint(size*85) + 1
+  y = nint(size*ratio*85) + 1
+  
+end subroutine pgszrat2xy_bitmap
+!***********************************************************************************************************************************
+
+
+
+!***********************************************************************************************************************************
+!> Convert x,y screen dimensions to PGPlot paper size and ratio for a screen
+!! \param horiz   Horizontal screen size (pixels) (int)
+!! \param vert    Vertical screen size (pixels) (int)
+!! \param dpi     Screen resolution in dots per inch (int)
+!! \retval size   PGPlot screen size (real)
+!! \retval ratio  PGPlot screen ratio (real)
+!<
+subroutine pgxy2szrat_screen(horiz,vert, dpi, size,ratio)
+  implicit none
+  integer, intent(in) :: horiz,vert,dpi
+  real, intent(out) :: size,ratio
+  
+  size  = real(horiz-48) / real(dpi)
+  ratio = real(vert -48) / real(horiz-48)
+  
+end subroutine pgxy2szrat_screen
+!***********************************************************************************************************************************
+
+
+!***********************************************************************************************************************************
+!> Convert PGPlot paper size and ratio to screen dimensions
+!! \param size    PGPlot screen size (real)
+!! \param ratio   PGPlot screen ratio (real)
+!! \param dpi     Screen resolution in dots per inch (int)
+!! \retval horiz  Horizontal screen size (pixels) (int)
+!! \retval vert   Vertical screen size (pixels) (int)
+!<
+subroutine pgszrat2xy_screen(size,ratio, dpi, horiz,vert)
+  implicit none
+  real, intent(in) :: size,ratio
+  integer, intent(in) :: dpi
+  integer, intent(out) :: horiz,vert
+  
+  horiz = nint(dpi*size)       + 48
+  vert  = nint(dpi*size*ratio) + 48
+  
+end subroutine pgszrat2xy_screen
+!***********************************************************************************************************************************
 
 
